<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".fragmentos.MasFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frgMasLblAjustes"
            android:padding="8dp"
            android:textSize="30dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardElevation="15dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="25dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="@string/frgMasPreferencias"
                    android:textColor="@color/black"
                    android:textAllCaps="false"
                    android:gravity="center"/>

                <CheckBox
                    android:id="@+id/frgMasNotificaciones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/frgMasCbxNotificaciones" />
                <CheckBox
                    android:id="@+id/frgMasSonido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/frgMasCbxSonido" />

                <Spinner
                    android:id="@+id/frgMasIdioma"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="30dp">
            <Button
                android:id="@+id/frgMasBtnGuardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/frgMasBtnGuardar"
                android:textColor="@color/black"
                android:layout_marginRight="15dp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/frgMasBtnCerrarSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/frgMasBtnCerrarSesion"
                android:textAllCaps="false"
                android:layout_weight="1"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_sugerencias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:text="@string/frgMasSugerencias"/>

            <Button
                android:id="@+id/btn_ayuda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:text="@string/frgMasAyuda" />

            <Button
                android:id="@+id/btn_acerca_de"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:text="@string/frgMasAcerca"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>