<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.BuscarFragment">

    <!-- Contenedor principal -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frgBusLblBusqueda"
            android:padding="8dp"
            android:textSize="30dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">
            <AutoCompleteTextView
                android:id="@+id/frgBusAutoCompleteSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Fondo_proyecto"
                android:hint="@string/frgBuscarTintAutoComplete"
                android:textAllCaps="false"
                android:completionThreshold="1" />

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:text="@string/frgBuscarBtnBuscar" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/frgBusLbLResultados"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/frgBusRecBusqueda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </LinearLayout>


</FrameLayout>